FINAL Clapping Music Module (#1)
Condition 9 now becomes Lit CLR indicator instead of Unlit CLR indicator
Fixed logging and added TP support.

Thanks again to Deaf for his amazing modding tutorial, and to the OG Royal Flush for his tutorials as well.

Plan to finalize The Teardrop next.

--- a/Clapping Music for logbot/HTML/Clapping Music.html
+++ b/Clapping Music for logbot/HTML/Clapping Music.html
@@ -116,7 +116,7 @@
                             X👏👏X👏👏👏X👏👏X👏
                         </td>
                         <td>
-                            Unlit CLR indicator or Lit NSA indicator.
+                            Lit CLR indicator or Lit NSA indicator.
                         </td>
                     </tr>
                     <tr>
